# ChangeLog for app-misc/calculate-install-gui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-gui-2.2.0.0 (07 Oct 2010)

  07 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.0.0.ebuild:
  Bump version.

*calculate-install-gui-2.2.0.0_p20100930-r3 (05 Oct 2010)

  05 Oct 2010; Трацевский Александр
  <atratsevskiy@gentoo.org>
  -calculate-install-gui-2.2.0.0_p20100930-r2.ebuild,
  +calculate-install-gui-2.2.0.0_p20100930-r3.ebuild:
  Daily update

*calculate-install-gui-2.2.0.0_p20100930-r2 (04 Oct 2010)

  04 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100930-r1.ebuild,
  +calculate-install-gui-2.2.0.0_p20100930-r2.ebuild:
  Daily update.

*calculate-install-gui-2.2.0.0_p20100930-r1 (30 Sep 2010)

  30 Sep 2010; Трацевский Александр <alex@gentoo.org>
  -calculate-install-gui-2.2.0.0_p20100930.ebuild,
  +calculate-install-gui-2.2.0.0_p20100930-r1.ebuild:
  daily update

*calculate-install-gui-2.2.0.0_p20100930 (30 Sep 2010)

  30 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100929.ebuild,
  +calculate-install-gui-2.2.0.0_p20100930.ebuild:
  Update depends.

*calculate-install-gui-2.2.0.0_p20100929 (29 Sep 2010)

  29 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.0.0_p20100929.ebuild:
  Update version.

*calculate-install-gui-2.2.0.0_p20100927 (27 Sep 2010)

  27 Sep 2010; Трацевский Александр <alex@gentoo.org>
  -calculate-install-gui-2.2.0.0_p20100902.ebuild,
  -calculate-install-gui-2.2.0.0_p20100910-r1.ebuild,
  -calculate-install-gui-2.2.0.0_p20100921-r1.ebuild,
  -calculate-install-gui-2.2.0.0_p20100922.ebuild,
  +calculate-install-gui-2.2.0.0_p20100927.ebuild:
  daily update

*calculate-install-gui-2.2.0.0_p20100922 (22 Sep 2010)

  22 Sep 2010; Трацевский Александр <alex@gentoo.org>
  +calculate-install-gui-2.2.0.0_p20100922.ebuild: