@@ -1,5 +1,6 @@
 DIST calculate-install-gui-2.2.0.0.tar.bz2 153491 RMD160 d8e1d98b8ae71c440b6a1c1b3b7e25900f05db6b SHA1 debf43819a4637db8cfb0ccbae9d2ab6e135b5ae SHA256 268fe282e823f56fdbabdca8e213fad62bd40931f08c262dd786d9bfe72ee451
 EBUILD calculate-install-gui-2.2.0.0.ebuild 704 RMD160 ed712d5931233c3040c5d756933d3af33d3511de SHA1 4489fb5c7dc1cb9f695a14005a6928909f61e560 SHA256 b93f23187edbab6fd2d911a08814a9ef10eef4e2fa70f450c8ef92914ab61794
+EBUILD calculate-install-gui-2.2.0.1_rc1.ebuild 740 RMD160 e00a99f5565d844e02734116ed5ac7e78b072c21 SHA1 5359401915de98143f713149feac19f32632088b SHA256 225986e2c09db3b76ceeebc0bdd8a56ee2816112ac3c5e2224ee8c1ef6ccb4b6
 EBUILD calculate-install-gui-2.2.9999.ebuild 700 RMD160 523695d636602b4c39ded773b5b28e70d169866b SHA1 31b061fd8d18bd72b0532a0da34ed516360efda5 SHA256 ec0e5c94233f4bc20aa839892d619625d560e51772f89e55a1d4c7d56501aa7a
-MISC ChangeLog 5954 RMD160 25505ca486b306a56e6f9339c0fa0409bb3147fc SHA1 bd62c6489631bf2688aaccbe4f63aa5589cb742c SHA256 e52b84fd973616044da4f2feb1f5c639a2440ee85119b9ed49956f250c48ee97
+MISC ChangeLog 6143 RMD160 1bbebc03fadf7385795028f24f516f7212134e85 SHA1 d6eddc46592b47ca47dcd73bfca0f5fdd3fc6ec8 SHA256 c9ebbd477170bea85d2f0ff56cbcc7f08047938b95dee747bc577c2e49cd643f
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
