@@ -9,8 +9,8 @@ EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb
 EBUILD calculate-lib-2.1.8-r1.ebuild 730 RMD160 a3e9d20526f3078d1f1dc8894a3ac88a090cf968 SHA1 6bc25d2449e5f54df3675311ff5211bc00dcf907 SHA256 764f5b146cc9064de5e1c920ec88b0b91c5fb696c73c853435c7f7750b8bf0db
 EBUILD calculate-lib-2.1.9-r1.ebuild 730 RMD160 04e6029a7220a267356eb463d1bad3e9e4ff0bc0 SHA1 b85072f4d22760283adecdd6b10e21ddd14ea73f SHA256 c4b9c1deb7f64426440e1f9249102cbc5d3f52603166870f1c2819ec474015d6
 EBUILD calculate-lib-2.2.0.0.ebuild 673 RMD160 d001857a4549aa24cdff07c6371de3a8eb497978 SHA1 fae71f1bdd825d51e20066238b5e5f28f08a5877 SHA256 b7827fe65d2a76a93c1542e36db3d01fc95e3ae72db2fbf07a19514aaf9dfe60
-EBUILD calculate-lib-2.2.0.1_rc2-r1.ebuild 879 RMD160 04dddb3c9401d3daefd25888b17eb198ce3b0c33 SHA1 88814fb2b0e77a870cd6e984069c77e67d0b2c32 SHA256 f4d0c414516069892a27be83149c6c180803678a1d60c80667cc6d673f40a8a5
+EBUILD calculate-lib-2.2.0.1_rc2-r2.ebuild 879 RMD160 d16b8758f03894ecf9c3b35aacdb06c58dedc293 SHA1 092161b17991ce9a28a2a0d79ba773994b6878fd SHA256 969155cad25d258630a0f95002fdd11945a268f938ecc0af2f3c9f29f8c751a5
 EBUILD calculate-lib-2.2.9999.ebuild 592 RMD160 e559e7ccafdb150093a055b4f90bf33666ab796c SHA1 752fe9e05ce1380af9a44bf5e81a56dc00f36506 SHA256 f4cf5511cca3007b735cf98871ee72442c6bf677be63349058d1bb029a4b1abf
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 9013 RMD160 6d05727adec52b09f90071d5f0b67f12055f3983 SHA1 f87eea4d77232c236abf52fa0d574e0a9a9b73e3 SHA256 b4df612f717520b845a0b10c6cf7c9c29398b0313aeb70920ece505cc56ab05e
+MISC ChangeLog 9240 RMD160 f5b8d25363f5a0eef0410a5221457d0dbed32ff2 SHA1 0af64b898aaf1ba25f5bfc2447b25927a8a587cc SHA256 ede06b1e62f6847146c2eb2b80c33f9fa2d086dc1511570210e962416bbfa5cf
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
