@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.2.0.1_rc2-r2 (18 Oct 2010)
+
+  18 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-lib-2.2.0.1_rc2-r1.ebuild,
+  +calculate-lib-2.2.0.1_rc2-r2.ebuild:
+  Update for using without py-smbpasswd.
+
 *calculate-lib-2.2.0.1_rc2 (15 Oct 2010)
 
   15 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
