@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.1_rc1 (18 Oct 2010)
+
+  18 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-install-gui-2.2.0.1_rc1.ebuild:
+  Create rc for resolve depends.
+
 *calculate-install-gui-2.2.0.0 (07 Oct 2010)
 
   07 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
